♻️ refactor(resources): make config ownership intrinsic
